实现spm的逆向，重写读取逻辑

--- a/backend/src/main/resources/static/dat_editor_demo.html
+++ b/backend/src/main/resources/static/dat_editor_demo.html
@@ -204,6 +204,9 @@
     });
 
     const buffer = [];
+    // 行数
+    writeInt32(buffer, editedRows.length);
+    // 列数
     writeInt32(buffer, datData.columns.length);
 
     datData.columns.forEach(colType => {
